# batfish

./: README.md  WORKSPACE  library_deps.bzl  maven_install.json
projects/: pom.xml
projects/allinone/: BUILD
projects/allinone/src/test/java/: BUILD
projects/allinone/src/test/java/org/batfish/question/: BUILD
projects/allinone/src/test/resources/: BUILD
projects/batfish/: BUILD
projects/batfish-client/: BUILD
projects/batfish-client/src/main/java/org/batfish/client/: Client.java
projects/batfish-common-protocol/: BUILD  pom.xml
projects/batfish-common-protocol/src/main/java/org/batfish/common/: Answerer.java  WorkItem.java
projects/batfish-common-protocol/src/main/java/org/batfish/datamodel/: AnnotatedRoute.java  AsPath.java  AsPathAccessList.java  (+22 more)
projects/lib/antlr4/: BUILD  BUILDING.md
projects/minesweeper/: BUILD
projects/question/: BUILD
projects/question/src/main/java/org/batfish/question/awssecuritygroup/: AwsSecurityGroupRule.java  BUILD.bazel  CiscoNxosToAwsSecurityGroupConverter.java  ConvertToAwsSecurityGroupAnswerer.java  ConvertToAwsSecurityGroupQuestion.java  IpAddressSpecToIpSpace.java  IpSpaceToCidr.java
questions/experimental/: convertToAwsSecurityGroup.json
tests/basic/: routes-dc-as-reuse.ref  routes.ref
tests/parsing-tests/: unit-tests-nodes.ref  unit-tests-undefined.ref  unit-tests-unused.ref  unit-tests-vimodel.ref  unit-tests.ref
tests/parsing-tests/networks/unit-tests/configs/: cisco_acl
tests/parsing-tests/networks/unit-tests/configs/nxos/: nxos_bgp
tests/questions/experimental/: convertToAwsSecurityGroup.ref
(+258 files in other folders)
